# OmniToken

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
bench/: compare_hf_tiktoken.py  corpus.txt
ci/: gha.yml
python/omnitoken/: pyproject.toml  test.py  test_save_load.py
python/omnitoken/omnitoken/: __init__.py  _native.pyi
python/omnitoken/tests/: test_tokenizer.py
rust/omnitoken-code/: Cargo.toml
rust/omnitoken-code/src/: lib.rs
rust/omnitoken-core/: Cargo.toml
rust/omnitoken-core/src/: lib.rs
rust/omnitoken-store/: Cargo.toml
rust/omnitoken-store/src/: lib.rs
