[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "omnitoken"
version = "0.1.0"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
module-name = "omnitoken._native"
bindings = "pyo3"
manifest-path = "../../rust/omnitoken-store/Cargo.toml"
