[package]
name = "omnitoken-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "omnitoken_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rkyv = { version = "0.7", features = ["validation"] }
omnitoken-code = { path = "../omnitoken-code" }
