[package]
name = "omnitoken-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[dependencies]
omnitoken-core = { path = "../omnitoken-core" }
rkyv = { version = "0.7", features = ["validation", "bytecheck"] }
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
